// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deserialize bodybox block 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "leaves": Array [
              Object {
                "marks": Array [],
                "object": "leaf",
                "text": "test",
              },
            ],
            "object": "text",
          },
        ],
        "object": "block",
        "type": "bodybox",
      },
    ],
    "object": "document",
  },
  "object": "value",
}
`;

exports[`deserialize em mark that contains embed footnote 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "leaves": Array [
              Object {
                "marks": Array [
                  Object {
                    "data": Object {},
                    "object": "mark",
                    "type": "italic",
                  },
                ],
                "object": "leaf",
                "text": "NDLA",
              },
            ],
            "object": "text",
          },
          Object {
            "data": Object {
              "authors": Array [
                "Peter, Christian",
              ],
              "edition": "",
              "publisher": "Knowit",
              "resource": "footnote",
              "title": "Javascript.",
              "type": "Programming",
              "year": "2018",
            },
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [
                      Object {
                        "data": Object {},
                        "object": "mark",
                        "type": "italic",
                      },
                    ],
                    "object": "leaf",
                    "text": "#",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "inline",
            "type": "footnote",
          },
          Object {
            "leaves": Array [
              Object {
                "marks": Array [
                  Object {
                    "data": Object {},
                    "object": "mark",
                    "type": "italic",
                  },
                ],
                "object": "leaf",
                "text": " ",
              },
            ],
            "object": "text",
          },
        ],
        "object": "block",
        "type": "paragraph",
      },
    ],
    "object": "document",
  },
  "object": "value",
}
`;

exports[`deserialize footnote 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "leaves": Array [
              Object {
                "marks": Array [],
                "object": "leaf",
                "text": "",
              },
            ],
            "object": "text",
          },
          Object {
            "data": Object {
              "authors": Array [
                "Jony Ive",
              ],
              "edition": "2",
              "publisher": "Apple",
              "resource": "footnote",
              "title": "Apple Watch",
              "type": "",
              "year": "2015",
            },
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "#",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "inline",
            "type": "footnote",
          },
          Object {
            "leaves": Array [
              Object {
                "marks": Array [],
                "object": "leaf",
                "text": "",
              },
            ],
            "object": "text",
          },
          Object {
            "data": Object {
              "authors": Array [
                "Steve Jobs",
                "Jony Ive",
              ],
              "edition": "1",
              "publisher": "Apple",
              "resource": "footnote",
              "title": "iPhone",
              "type": "",
              "year": "2007",
            },
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "#",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "inline",
            "type": "footnote",
          },
          Object {
            "leaves": Array [
              Object {
                "marks": Array [],
                "object": "leaf",
                "text": "",
              },
            ],
            "object": "text",
          },
        ],
        "object": "block",
        "type": "paragraph",
      },
    ],
    "object": "document",
  },
  "object": "value",
}
`;

exports[`deserialize standard article 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "Blokk 1 ",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "heading-two",
          },
        ],
        "object": "block",
        "type": "section",
      },
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "paragraph",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "leaves": Array [
                      Object {
                        "marks": Array [],
                        "object": "leaf",
                        "text": "Bullet 1",
                      },
                    ],
                    "object": "text",
                  },
                ],
                "object": "block",
                "type": "list-item",
              },
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "leaves": Array [
                      Object {
                        "marks": Array [],
                        "object": "leaf",
                        "text": "Bullet 2",
                      },
                    ],
                    "object": "text",
                  },
                ],
                "object": "block",
                "type": "list-item",
              },
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "leaves": Array [
                      Object {
                        "marks": Array [],
                        "object": "leaf",
                        "text": "Bullet 3",
                      },
                    ],
                    "object": "text",
                  },
                ],
                "object": "block",
                "type": "list-item",
              },
            ],
            "object": "block",
            "type": "bulleted-list",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "paragraph",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "leaves": Array [
                      Object {
                        "marks": Array [],
                        "object": "leaf",
                        "text": "Bodybox",
                      },
                    ],
                    "object": "text",
                  },
                ],
                "object": "block",
                "type": "heading-two",
              },
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "leaves": Array [
                      Object {
                        "marks": Array [],
                        "object": "leaf",
                        "text": "Bodybox content",
                      },
                    ],
                    "object": "text",
                  },
                ],
                "object": "block",
                "type": "paragraph",
              },
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "data": Object {},
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": "A bodybox quote",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "paragraph",
                  },
                ],
                "object": "block",
                "type": "quote",
              },
            ],
            "object": "block",
            "type": "bodybox",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "leaves": Array [
                      Object {
                        "marks": Array [],
                        "object": "leaf",
                        "text": "A wise quote",
                      },
                    ],
                    "object": "text",
                  },
                ],
                "object": "block",
                "type": "paragraph",
              },
            ],
            "object": "block",
            "type": "quote",
          },
          Object {
            "data": Object {
              "type": "letters",
            },
            "nodes": Array [
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "leaves": Array [
                      Object {
                        "marks": Array [],
                        "object": "leaf",
                        "text": "Alpha 1",
                      },
                    ],
                    "object": "text",
                  },
                ],
                "object": "block",
                "type": "list-item",
              },
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "leaves": Array [
                      Object {
                        "marks": Array [],
                        "object": "leaf",
                        "text": "Alpha 2",
                      },
                    ],
                    "object": "text",
                  },
                ],
                "object": "block",
                "type": "list-item",
              },
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "leaves": Array [
                      Object {
                        "marks": Array [],
                        "object": "leaf",
                        "text": "Alpha 3",
                      },
                    ],
                    "object": "text",
                  },
                ],
                "object": "block",
                "type": "list-item",
              },
            ],
            "object": "block",
            "type": "letter-list",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "paragraph",
          },
          Object {
            "data": Object {
              "type": "factAside",
            },
            "nodes": Array [
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "leaves": Array [
                      Object {
                        "marks": Array [],
                        "object": "leaf",
                        "text": "Fact box",
                      },
                    ],
                    "object": "text",
                  },
                ],
                "object": "block",
                "type": "heading-two",
              },
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "leaves": Array [
                      Object {
                        "marks": Array [],
                        "object": "leaf",
                        "text": "This should contain some facts!",
                      },
                    ],
                    "object": "text",
                  },
                ],
                "object": "block",
                "type": "paragraph",
              },
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "leaves": Array [
                      Object {
                        "marks": Array [],
                        "object": "leaf",
                        "text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec laoreet sit amet tortor quis sollicitudin. Donec lacinia, nisl a pharetra lacinia, eros nisi interdum neque, quis egestas lacus dolor et orci. Aenean ac pellentesque mauris. Vestibulum et imperdiet enim. Nam elementum massa non suscipit egestas. Proin malesuada vitae nulla ut vulputate. Cras eleifend orci est, eget rhoncus mi porttitor quis. Nunc sem mi, maximus sit amet ultricies id, varius congue arcu. Pellentesque eu lacus hendrerit, porta erat ut, pharetra urna.",
                      },
                    ],
                    "object": "text",
                  },
                ],
                "object": "block",
                "type": "paragraph",
              },
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "leaves": Array [
                      Object {
                        "marks": Array [],
                        "object": "leaf",
                        "text": "Proin vehicula odio id dui vehicula, id pellentesque mauris tincidunt. Aliquam eget porta leo. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Praesent posuere ante a dapibus maximus. Nulla quis felis sit amet justo mollis suscipit ut non massa. Quisque et nulla ligula. Nam dictum pharetra dui ut tempus. Morbi rutrum urna eu sem euismod, vitae rutrum turpis bibendum. Etiam vulputate urna eget mauris dictum, quis cursus leo scelerisque. Nunc imperdiet elementum nunc in vehicula. Praesent ante purus, posuere vitae luctus sit amet, scelerisque et nibh. Aliquam vestibulum ligula at tristique varius. Proin fermentum nisi in ligula cursus, nec scelerisque felis interdum.",
                      },
                    ],
                    "object": "text",
                  },
                ],
                "object": "block",
                "type": "paragraph",
              },
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "leaves": Array [
                      Object {
                        "marks": Array [],
                        "object": "leaf",
                        "text": "Nunc velit dui, sagittis vel lectus eu, tempus porttitor risus. Duis tristique ipsum id massa consequat, non bibendum nisl dictum. Mauris non dignissim sapien. In congue massa libero, at malesuada risus aliquet et. Morbi tincidunt, nisi ac luctus vulputate, nibh nisl vulputate nisi, ac interdum ligula est a ex. Vestibulum at sapien eget odio vulputate varius quis non felis. Donec quis volutpat nisl, at tristique erat. Vestibulum tempor, urna eget hendrerit suscipit, lorem metus mollis nunc, a rhoncus metus lectus elementum justo. Donec id felis at orci varius interdum eu ut orci. Vestibulum quis tempus metus, sed accumsan arcu. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.",
                      },
                    ],
                    "object": "text",
                  },
                ],
                "object": "block",
                "type": "paragraph",
              },
            ],
            "object": "block",
            "type": "aside",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "paragraph",
          },
          Object {
            "data": Object {
              "isHeader": false,
            },
            "nodes": Array [
              Object {
                "data": Object {
                  "isHeader": false,
                },
                "nodes": Array [
                  Object {
                    "data": Object {
                      "isHeader": true,
                    },
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": "Navn",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table-cell",
                  },
                  Object {
                    "data": Object {
                      "isHeader": true,
                    },
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": "Alder",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table-cell",
                  },
                  Object {
                    "data": Object {
                      "isHeader": true,
                    },
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": "Kommune",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table-cell",
                  },
                  Object {
                    "data": Object {
                      "isHeader": true,
                    },
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": "Fylke",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table-cell",
                  },
                ],
                "object": "block",
                "type": "table-row",
              },
              Object {
                "data": Object {
                  "isHeader": false,
                },
                "nodes": Array [
                  Object {
                    "data": Object {
                      "isHeader": false,
                    },
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": "Ola Nordmann",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table-cell",
                  },
                  Object {
                    "data": Object {
                      "isHeader": false,
                    },
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": "46",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table-cell",
                  },
                  Object {
                    "data": Object {
                      "isHeader": false,
                    },
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": "OSLO",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table-cell",
                  },
                  Object {
                    "data": Object {
                      "isHeader": false,
                    },
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": "OSLO",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table-cell",
                  },
                ],
                "object": "block",
                "type": "table-row",
              },
              Object {
                "data": Object {
                  "isHeader": false,
                },
                "nodes": Array [
                  Object {
                    "data": Object {
                      "isHeader": false,
                    },
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": "Kari Nordman",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table-cell",
                  },
                  Object {
                    "data": Object {
                      "isHeader": false,
                    },
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": "44",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table-cell",
                  },
                  Object {
                    "data": Object {
                      "isHeader": false,
                    },
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": "SKEDSMO",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table-cell",
                  },
                  Object {
                    "data": Object {
                      "isHeader": false,
                    },
                    "nodes": Array [
                      Object {
                        "leaves": Array [
                          Object {
                            "marks": Array [],
                            "object": "leaf",
                            "text": "OSLO",
                          },
                        ],
                        "object": "text",
                      },
                    ],
                    "object": "block",
                    "type": "table-cell",
                  },
                ],
                "object": "block",
                "type": "table-row",
              },
            ],
            "object": "block",
            "type": "table",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "paragraph",
          },
          Object {
            "data": Object {
              "align": "",
              "alt": "focalpoint",
              "caption": "focalpoint",
              "focal-x": "20.126776485788113",
              "focal-y": "7.414585620197585",
              "resource": "image",
              "resource_id": "2",
              "size": "fullbredde",
              "url": "https://test.api.ndla.no/image-api/v2/images/2",
            },
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "embed",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "paragraph",
          },
          Object {
            "data": Object {
              "align": "",
              "alt": "cropped",
              "caption": "cropped",
              "lower-right-x": "71.0625",
              "lower-right-y": "56.90364583333333",
              "resource": "image",
              "resource_id": "3",
              "size": "fullbredde",
              "upper-left-x": "37.72916666666667",
              "upper-left-y": "23.736979166666668",
              "url": "https://test.api.ndla.no/image-api/v2/images/3",
            },
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "embed",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec laoreet sit amet tortor quis sollicitudin. Donec lacinia, nisl a pharetra lacinia, eros nisi interdum neque, quis egestas lacus dolor et orci. Aenean ac pellentesque mauris. Vestibulum et imperdiet enim. Nam elementum massa non suscipit egestas. Proin malesuada vitae nulla ut vulputate. Cras eleifend orci est, eget rhoncus mi porttitor quis. Nunc sem mi, maximus sit amet ultricies id, varius congue arcu. Pellentesque eu lacus hendrerit, porta erat ut, pharetra urna.",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "paragraph",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "Proin vehicula odio id dui vehicula, id pellentesque mauris tincidunt. Aliquam eget porta leo. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Praesent posuere ante a dapibus maximus. Nulla quis felis sit amet justo mollis suscipit ut non massa. Quisque et nulla ligula. Nam dictum pharetra dui ut tempus. Morbi rutrum urna eu sem euismod, vitae rutrum turpis bibendum. Etiam vulputate urna eget mauris dictum, quis cursus leo scelerisque. Nunc imperdiet elementum nunc in vehicula. Praesent ante purus, posuere vitae luctus sit amet, scelerisque et nibh. Aliquam vestibulum ligula at tristique varius. Proin fermentum nisi in ligula cursus, nec scelerisque felis interdum.",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "paragraph",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "paragraph",
          },
          Object {
            "data": Object {
              "align": "left",
              "alt": "left align",
              "caption": "left align",
              "resource": "image",
              "resource_id": "4",
              "size": "fullbredde",
              "url": "https://test.api.ndla.no/image-api/v2/images/4",
            },
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "embed",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "Nunc velit dui, sagittis vel lectus eu, tempus porttitor risus. Duis tristique ipsum id massa consequat, non bibendum nisl dictum. Mauris non dignissim sapien. In congue massa libero, at malesuada risus aliquet et. Morbi tincidunt, nisi ac luctus vulputate, nibh nisl vulputate nisi, ac interdum ligula est a ex. Vestibulum at sapien eget odio vulputate varius quis non felis. Donec quis volutpat nisl, at tristique erat. Vestibulum tempor, urna eget hendrerit suscipit, lorem metus mollis nunc, a rhoncus metus lectus elementum justo. Donec id felis at orci varius interdum eu ut orci. Vestibulum quis tempus metus, sed accumsan arcu. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "paragraph",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "Phasellus vitae metus vitae tellus imperdiet fringilla vel sit amet metus. Praesent tincidunt diam in laoreet maximus. Nulla ultricies dolor in nisi imperdiet lobortis. Nullam euismod, ex quis tempus maximus, nunc tortor dictum massa, non pulvinar turpis magna vestibulum tellus. Donec vehicula neque sed vehicula varius. Nam in cursus lectus, eget laoreet ex. Donec eleifend varius mi ac dapibus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed at erat non arcu porta posuere sit amet ut nunc. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Etiam ornare massa id ipsum interdum pulvinar. Donec sed malesuada sem, non tempus ligula. In hac habitasse platea dictumst. Proin metus tortor, molestie id commodo ullamcorper, malesuada volutpat nisi.",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "paragraph",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "paragraph",
          },
          Object {
            "data": Object {
              "align": "right",
              "alt": "right align",
              "caption": "right align",
              "resource": "image",
              "resource_id": "6",
              "size": "fullbredde",
              "url": "https://test.api.ndla.no/image-api/v2/images/6",
            },
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "embed",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "In hac habitasse platea dictumst. Curabitur vestibulum nisl leo, blandit vehicula purus cursus vel. Pellentesque ac mi dolor. Ut pretium arcu pharetra justo ultrices aliquam. Aliquam leo est, congue eget ultricies at, commodo a massa. In ultrices consectetur ante, sit amet vestibulum lorem volutpat sed. Fusce orci orci, pretium at aliquet eu, ornare sed lacus. Nunc ut odio velit. In velit mauris, fringilla sit amet mi ornare, dictum molestie ipsum. Donec eget justo accumsan, malesuada nisi id, commodo elit. Mauris congue lacus a scelerisque varius.",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "paragraph",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "paragraph",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "paragraph",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "paragraph",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "paragraph",
          },
          Object {
            "data": Object {
              "account": "4806596774001",
              "caption": "video",
              "player": "BkLm8fT",
              "resource": "brightcove",
              "videoid": "5389115230001",
            },
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "embed",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "paragraph",
          },
          Object {
            "data": Object {
              "resource": "audio",
              "resource_id": "945",
              "url": "https://test.api.ndla.no/audio-api/v1/audio/945",
            },
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "embed",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "Hei på ",
                  },
                ],
                "object": "text",
              },
              Object {
                "data": Object {
                  "href": "https://ndla.no/",
                  "rel": "",
                  "target": "",
                },
                "nodes": Array [
                  Object {
                    "leaves": Array [
                      Object {
                        "marks": Array [],
                        "object": "leaf",
                        "text": "deg",
                      },
                    ],
                    "object": "text",
                  },
                ],
                "object": "inline",
                "type": "link",
              },
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": " og ",
                  },
                ],
                "object": "text",
              },
              Object {
                "data": Object {
                  "href": "https://ndla.no/",
                  "rel": "noopener noreferrer",
                  "target": "_blank",
                },
                "nodes": Array [
                  Object {
                    "leaves": Array [
                      Object {
                        "marks": Array [],
                        "object": "leaf",
                        "text": "meg",
                      },
                    ],
                    "object": "text",
                  },
                ],
                "object": "inline",
                "type": "link",
              },
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "paragraph",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "paragraph",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "NDLA ",
                  },
                ],
                "object": "text",
              },
              Object {
                "data": Object {
                  "href": "https://ndla.no/en/node/42",
                  "rel": "noopener noreferrer",
                  "target": "_blank",
                },
                "nodes": Array [
                  Object {
                    "leaves": Array [
                      Object {
                        "marks": Array [],
                        "object": "leaf",
                        "text": "NODE ID",
                      },
                    ],
                    "object": "text",
                  },
                ],
                "object": "inline",
                "type": "link",
              },
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "paragraph",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "ddd",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "paragraph",
          },
        ],
        "object": "block",
        "type": "section",
      },
    ],
    "object": "document",
  },
  "object": "value",
}
`;

exports[`deserializing a br 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "leaves": Array [
              Object {
                "marks": Array [],
                "object": "leaf",
                "text": "",
              },
            ],
            "object": "text",
          },
        ],
        "object": "block",
        "type": "br",
      },
    ],
    "object": "document",
  },
  "object": "value",
}
`;

exports[`deserializing a normal div block 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "A paragraph",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "paragraph",
          },
        ],
        "object": "block",
        "type": "div",
      },
    ],
    "object": "document",
  },
  "object": "value",
}
`;

exports[`deserializing a quote 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "leaves": Array [
              Object {
                "marks": Array [],
                "object": "leaf",
                "text": "This quote should be both smart and wise",
              },
            ],
            "object": "text",
          },
        ],
        "object": "block",
        "type": "quote",
      },
    ],
    "object": "document",
  },
  "object": "value",
}
`;

exports[`deserializing a section 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "Paragraph text",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "paragraph",
          },
        ],
        "object": "block",
        "type": "section",
      },
    ],
    "object": "document",
  },
  "object": "value",
}
`;

exports[`deserializing a span with attributes 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "leaves": Array [
              Object {
                "marks": Array [],
                "object": "leaf",
                "text": "",
              },
            ],
            "object": "text",
          },
          Object {
            "data": Object {
              "lang": "en",
            },
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "Hyper Text Markup Language",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "inline",
            "type": "span",
          },
          Object {
            "leaves": Array [
              Object {
                "marks": Array [],
                "object": "leaf",
                "text": "",
              },
            ],
            "object": "text",
          },
        ],
        "object": "block",
        "type": "paragraph",
      },
    ],
    "object": "document",
  },
  "object": "value",
}
`;

exports[`deserializing alphabetical list 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {
          "type": "letters",
        },
        "nodes": Array [
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "Rad 1",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "list-item",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "Rad 2",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "list-item",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "Rad 3",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "list-item",
          },
        ],
        "object": "block",
        "type": "letter-list",
      },
    ],
    "object": "document",
  },
  "object": "value",
}
`;

exports[`deserializing any heading becomes heading-two except heading-three 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "leaves": Array [
              Object {
                "marks": Array [],
                "object": "leaf",
                "text": "heading 1",
              },
            ],
            "object": "text",
          },
        ],
        "object": "block",
        "type": "heading-two",
      },
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "leaves": Array [
              Object {
                "marks": Array [],
                "object": "leaf",
                "text": "heading 2",
              },
            ],
            "object": "text",
          },
        ],
        "object": "block",
        "type": "heading-two",
      },
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "leaves": Array [
              Object {
                "marks": Array [],
                "object": "leaf",
                "text": "heading 3",
              },
            ],
            "object": "text",
          },
        ],
        "object": "block",
        "type": "heading-three",
      },
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "leaves": Array [
              Object {
                "marks": Array [],
                "object": "leaf",
                "text": "heading 4",
              },
            ],
            "object": "text",
          },
        ],
        "object": "block",
        "type": "heading-two",
      },
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "leaves": Array [
              Object {
                "marks": Array [],
                "object": "leaf",
                "text": "heading 5",
              },
            ],
            "object": "text",
          },
        ],
        "object": "block",
        "type": "heading-two",
      },
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "leaves": Array [
              Object {
                "marks": Array [],
                "object": "leaf",
                "text": "heading 6",
              },
            ],
            "object": "text",
          },
        ],
        "object": "block",
        "type": "heading-two",
      },
    ],
    "object": "document",
  },
  "object": "value",
}
`;

exports[`deserializing any heading should result in heading-two except heading-three 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "leaves": Array [
              Object {
                "marks": Array [],
                "object": "leaf",
                "text": "Heading 1",
              },
            ],
            "object": "text",
          },
        ],
        "object": "block",
        "type": "heading-two",
      },
    ],
    "object": "document",
  },
  "object": "value",
}
`;

exports[`deserializing any heading should result in heading-two except heading-three 2`] = `
Object {
  "document": Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "leaves": Array [
              Object {
                "marks": Array [],
                "object": "leaf",
                "text": "Heading 2",
              },
            ],
            "object": "text",
          },
        ],
        "object": "block",
        "type": "heading-two",
      },
    ],
    "object": "document",
  },
  "object": "value",
}
`;

exports[`deserializing any heading should result in heading-two except heading-three 3`] = `
Object {
  "document": Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "leaves": Array [
              Object {
                "marks": Array [],
                "object": "leaf",
                "text": "Heading 3",
              },
            ],
            "object": "text",
          },
        ],
        "object": "block",
        "type": "heading-three",
      },
    ],
    "object": "document",
  },
  "object": "value",
}
`;

exports[`deserializing any heading should result in heading-two except heading-three 4`] = `
Object {
  "document": Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "leaves": Array [
              Object {
                "marks": Array [],
                "object": "leaf",
                "text": "Heading 4",
              },
            ],
            "object": "text",
          },
        ],
        "object": "block",
        "type": "heading-two",
      },
    ],
    "object": "document",
  },
  "object": "value",
}
`;

exports[`deserializing any heading should result in heading-two except heading-three 5`] = `
Object {
  "document": Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "leaves": Array [
              Object {
                "marks": Array [],
                "object": "leaf",
                "text": "Heading 5",
              },
            ],
            "object": "text",
          },
        ],
        "object": "block",
        "type": "heading-two",
      },
    ],
    "object": "document",
  },
  "object": "value",
}
`;

exports[`deserializing any heading should result in heading-two except heading-three 6`] = `
Object {
  "document": Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "leaves": Array [
              Object {
                "marks": Array [],
                "object": "leaf",
                "text": "Heading 6",
              },
            ],
            "object": "text",
          },
        ],
        "object": "block",
        "type": "heading-two",
      },
    ],
    "object": "document",
  },
  "object": "value",
}
`;

exports[`deserializing bullet list 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "Rad 1",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "list-item",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "Rad 2",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "list-item",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "Rad 3",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "list-item",
          },
        ],
        "object": "block",
        "type": "bulleted-list",
      },
    ],
    "object": "document",
  },
  "object": "value",
}
`;

exports[`deserializing details box with summary element 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "Summary text",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "summary",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "Details text",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "paragraph",
          },
        ],
        "object": "block",
        "type": "details",
      },
    ],
    "object": "document",
  },
  "object": "value",
}
`;

exports[`deserializing list with paragraph inside li elements 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "leaves": Array [
                      Object {
                        "marks": Array [],
                        "object": "leaf",
                        "text": "paragraph 1",
                      },
                    ],
                    "object": "text",
                  },
                ],
                "object": "block",
                "type": "list-text",
              },
            ],
            "object": "block",
            "type": "list-item",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "leaves": Array [
                      Object {
                        "marks": Array [],
                        "object": "leaf",
                        "text": "paragraph 2",
                      },
                    ],
                    "object": "text",
                  },
                ],
                "object": "block",
                "type": "list-text",
              },
            ],
            "object": "block",
            "type": "list-item",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "leaves": Array [
                      Object {
                        "marks": Array [],
                        "object": "leaf",
                        "text": "bold paragraph 3",
                      },
                    ],
                    "object": "text",
                  },
                ],
                "object": "block",
                "type": "list-text",
              },
            ],
            "object": "block",
            "type": "list-item",
          },
        ],
        "object": "block",
        "type": "bulleted-list",
      },
    ],
    "object": "document",
  },
  "object": "value",
}
`;

exports[`deserializing numbered list 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "Rad 1",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "list-item",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "Rad 2",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "list-item",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "Rad 3",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "list-item",
          },
        ],
        "object": "block",
        "type": "numbered-list",
      },
    ],
    "object": "document",
  },
  "object": "value",
}
`;

exports[`deserializing table 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {
          "isHeader": false,
        },
        "nodes": Array [
          Object {
            "data": Object {
              "isHeader": false,
            },
            "nodes": Array [
              Object {
                "data": Object {
                  "isHeader": true,
                },
                "nodes": Array [
                  Object {
                    "leaves": Array [
                      Object {
                        "marks": Array [],
                        "object": "leaf",
                        "text": "column 1",
                      },
                    ],
                    "object": "text",
                  },
                ],
                "object": "block",
                "type": "table-cell",
              },
              Object {
                "data": Object {
                  "isHeader": true,
                },
                "nodes": Array [
                  Object {
                    "leaves": Array [
                      Object {
                        "marks": Array [],
                        "object": "leaf",
                        "text": "column 2",
                      },
                    ],
                    "object": "text",
                  },
                ],
                "object": "block",
                "type": "table-cell",
              },
            ],
            "object": "block",
            "type": "table-row",
          },
          Object {
            "data": Object {
              "isHeader": false,
            },
            "nodes": Array [
              Object {
                "data": Object {
                  "isHeader": false,
                },
                "nodes": Array [
                  Object {
                    "leaves": Array [
                      Object {
                        "marks": Array [],
                        "object": "leaf",
                        "text": "column 1",
                      },
                    ],
                    "object": "text",
                  },
                ],
                "object": "block",
                "type": "table-cell",
              },
              Object {
                "data": Object {
                  "isHeader": false,
                },
                "nodes": Array [
                  Object {
                    "leaves": Array [
                      Object {
                        "marks": Array [],
                        "object": "leaf",
                        "text": "column 2",
                      },
                    ],
                    "object": "text",
                  },
                ],
                "object": "block",
                "type": "table-cell",
              },
            ],
            "object": "block",
            "type": "table-row",
          },
        ],
        "object": "block",
        "type": "table",
      },
    ],
    "object": "document",
  },
  "object": "value",
}
`;

exports[`deserializing two column list 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "Rad 1",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "list-item",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "Rad 2",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "list-item",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "Rad 3",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "list-item",
          },
        ],
        "object": "block",
        "type": "bulleted-list",
      },
    ],
    "object": "document",
  },
  "object": "value",
}
`;

exports[`serialize bodybox block 1`] = `
<div
  className="c-bodybox"
>
  <p>
    test
  </p>
</div>
`;

exports[`serialize embed block 1`] = `
<embed
  data-caption="test"
/>
`;

exports[`serialize footnote 1`] = `
<embed
  data-authors="Jony Ive"
  data-edition="4"
  data-publisher="Apple"
  data-title="Apple Watch"
  data-type="product"
  data-year="2015"
/>
`;

exports[`serializing a normal div block 1`] = `"<div><p>A paragraph</p></div>"`;

exports[`serializing a span with attributes 1`] = `"<p><span lang=\\"en\\">Hyper Text Markup Language</span></p>"`;

exports[`serializing br 1`] = `"<br/>"`;

exports[`serializing bullet list 1`] = `"<ul><li>Rad 1</li><li>Rad 2</li><li>Rad 3</li></ul>"`;

exports[`serializing details box with summary element 1`] = `"<details><summary>Summary text</summary></details>"`;

exports[`serializing heading-two 1`] = `"<h2>heading 2</h2>"`;

exports[`serializing letter list 1`] = `"<ol data-type=\\"letters\\"><li>Rad 1</li><li>Rad 2</li><li>Rad 3</li></ol>"`;

exports[`serializing numbered list 1`] = `"<ol><li>Rad 1</li><li>Rad 2</li><li>Rad 3</li></ol>"`;

exports[`serializing quote 1`] = `"<blockquote>This quote should be both smart and wise</blockquote>"`;

exports[`serializing section 1`] = `"<section><p>Paragraph text</p></section>"`;

exports[`serializing standard article 1`] = `
"
<section>
  <h2>Blokk 1</h2>
</section>
<section>
  <p />

  <ul>
    <li>Bullet 1</li>
    <li>Bullet 2</li>
    <li>Bullet 3</li>
  </ul>
  <p />

  <div class=\\"c-bodybox\\">
    <h2>Bodybox</h2>
    <p>Bodybox content</p>
    <blockquote>
      <p>A bodybox quote</p>
    </blockquote>
  </div>
  <blockquote>
    <p>A wise quote</p>
  </blockquote>
  <ol data-type=\\"letters\\">
    <li>Alpha 1</li>
    <li>Alpha 2</li>
    <li>Alpha 3</li>
  </ol>
  <p />

  <aside data-type=\\"factAside\\">
    <h2>Fact box</h2>
    <p>This should contain some facts!</p>
    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec laoreet sit amet tortor quis sollicitudin. Donec lacinia, nisl a pharetra lacinia, eros nisi interdum neque, quis egestas lacus dolor et orci. Aenean ac pellentesque mauris. Vestibulum et imperdiet enim. Nam elementum massa non suscipit egestas. Proin malesuada vitae nulla ut vulputate. Cras eleifend orci est, eget rhoncus mi porttitor quis. Nunc sem mi, maximus sit amet ultricies id, varius congue arcu. Pellentesque eu lacus hendrerit, porta erat ut, pharetra urna.
    </p>
    <p>Proin vehicula odio id dui vehicula, id pellentesque mauris tincidunt. Aliquam eget porta leo. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Praesent posuere ante a dapibus maximus. Nulla quis felis sit amet justo mollis suscipit ut non massa. Quisque et nulla ligula. Nam dictum pharetra dui ut tempus. Morbi rutrum urna eu sem euismod, vitae rutrum turpis bibendum. Etiam vulputate urna eget mauris dictum, quis cursus leo scelerisque. Nunc imperdiet elementum nunc in vehicula. Praesent ante purus, posuere vitae luctus sit amet, scelerisque et nibh. Aliquam vestibulum ligula at tristique varius. Proin fermentum nisi in ligula cursus, nec scelerisque felis interdum.
    </p>
    <p>Nunc velit dui, sagittis vel lectus eu, tempus porttitor risus. Duis tristique ipsum id massa consequat, non bibendum nisl dictum. Mauris non dignissim sapien. In congue massa libero, at malesuada risus aliquet et. Morbi tincidunt, nisi ac luctus vulputate, nibh nisl vulputate nisi, ac interdum ligula est a ex. Vestibulum at sapien eget odio vulputate varius quis non felis. Donec quis volutpat nisl, at tristique erat. Vestibulum tempor, urna eget hendrerit suscipit, lorem metus mollis nunc, a rhoncus metus lectus elementum justo. Donec id felis at orci varius interdum eu ut orci. Vestibulum quis tempus metus, sed accumsan arcu. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
    </p>
  </aside>
  <p />

  <table>
    <thead>
      <tr>
        <td>Navn</td>
        <td>Alder</td>
        <td>Kommune</td>
        <td>Fylke</td>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>Ola Nordmann</td>
        <td>46</td>
        <td>OSLO</td>
        <td>OSLO</td>
      </tr>
      <tr>
        <td>Kari Nordman</td>
        <td>44</td>
        <td>SKEDSMO</td>
        <td>OSLO</td>
      </tr>
    </tbody>
  </table>
  <p />

  <embed data-size=\\"fullbredde\\"
    data-align
    data-caption=\\"focalpoint\\"
    data-alt=\\"focalpoint\\"
    data-resource_id=\\"2\\"
    data-resource=\\"image\\"
    data-url=\\"https://test.api.ndla.no/image-api/v2/images/2\\"
    data-focal-x=\\"20.126776485788113\\"
    data-focal-y=\\"7.414585620197585\\">

  <p />

  <embed data-size=\\"fullbredde\\"
    data-align
    data-caption=\\"cropped\\"
    data-alt=\\"cropped\\"
    data-resource_id=\\"3\\"
    data-resource=\\"image\\"
    data-url=\\"https://test.api.ndla.no/image-api/v2/images/3\\"
    data-lower-right-x=\\"71.0625\\"
    data-lower-right-y=\\"56.90364583333333\\"
    data-upper-left-x=\\"37.72916666666667\\"
    data-upper-left-y=\\"23.736979166666668\\">

  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec laoreet sit amet tortor quis sollicitudin. Donec lacinia, nisl a pharetra lacinia, eros nisi interdum neque, quis egestas lacus dolor et orci. Aenean ac pellentesque mauris. Vestibulum et imperdiet enim. Nam elementum massa non suscipit egestas. Proin malesuada vitae nulla ut vulputate. Cras eleifend orci est, eget rhoncus mi porttitor quis. Nunc sem mi, maximus sit amet ultricies id, varius congue arcu. Pellentesque eu lacus hendrerit, porta erat ut, pharetra urna.
  </p>
  <p>Proin vehicula odio id dui vehicula, id pellentesque mauris tincidunt. Aliquam eget porta leo. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Praesent posuere ante a dapibus maximus. Nulla quis felis sit amet justo mollis suscipit ut non massa. Quisque et nulla ligula. Nam dictum pharetra dui ut tempus. Morbi rutrum urna eu sem euismod, vitae rutrum turpis bibendum. Etiam vulputate urna eget mauris dictum, quis cursus leo scelerisque. Nunc imperdiet elementum nunc in vehicula. Praesent ante purus, posuere vitae luctus sit amet, scelerisque et nibh. Aliquam vestibulum ligula at tristique varius. Proin fermentum nisi in ligula cursus, nec scelerisque felis interdum.
  </p>
  <p />

  <embed data-align=\\"left\\"
    data-alt=\\"left align\\"
    data-caption=\\"left align\\"
    data-resource=\\"image\\"
    data-resource_id=\\"4\\"
    data-size=\\"fullbredde\\"
    data-url=\\"https://test.api.ndla.no/image-api/v2/images/4\\">

  <p>Nunc velit dui, sagittis vel lectus eu, tempus porttitor risus. Duis tristique ipsum id massa consequat, non bibendum nisl dictum. Mauris non dignissim sapien. In congue massa libero, at malesuada risus aliquet et. Morbi tincidunt, nisi ac luctus vulputate, nibh nisl vulputate nisi, ac interdum ligula est a ex. Vestibulum at sapien eget odio vulputate varius quis non felis. Donec quis volutpat nisl, at tristique erat. Vestibulum tempor, urna eget hendrerit suscipit, lorem metus mollis nunc, a rhoncus metus lectus elementum justo. Donec id felis at orci varius interdum eu ut orci. Vestibulum quis tempus metus, sed accumsan arcu. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
  </p>
  <p>Phasellus vitae metus vitae tellus imperdiet fringilla vel sit amet metus. Praesent tincidunt diam in laoreet maximus. Nulla ultricies dolor in nisi imperdiet lobortis. Nullam euismod, ex quis tempus maximus, nunc tortor dictum massa, non pulvinar turpis magna vestibulum tellus. Donec vehicula neque sed vehicula varius. Nam in cursus lectus, eget laoreet ex. Donec eleifend varius mi ac dapibus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed at erat non arcu porta posuere sit amet ut nunc. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Etiam ornare massa id ipsum interdum pulvinar. Donec sed malesuada sem, non tempus ligula. In hac habitasse platea dictumst. Proin metus tortor, molestie id commodo ullamcorper, malesuada volutpat nisi.
  </p>
  <p />

  <embed data-align=\\"right\\"
    data-alt=\\"right align\\"
    data-caption=\\"right align\\"
    data-resource=\\"image\\"
    data-resource_id=\\"6\\"
    data-size=\\"fullbredde\\"
    data-url=\\"https://test.api.ndla.no/image-api/v2/images/6\\">

  <p>In hac habitasse platea dictumst. Curabitur vestibulum nisl leo, blandit vehicula purus cursus vel. Pellentesque ac mi dolor. Ut pretium arcu pharetra justo ultrices aliquam. Aliquam leo est, congue eget ultricies at, commodo a massa. In ultrices consectetur ante, sit amet vestibulum lorem volutpat sed. Fusce orci orci, pretium at aliquet eu, ornare sed lacus. Nunc ut odio velit. In velit mauris, fringilla sit amet mi ornare, dictum molestie ipsum. Donec eget justo accumsan, malesuada nisi id, commodo elit. Mauris congue lacus a scelerisque varius.
  </p>
  <p />

  <p />

  <p />

  <p />

  <embed data-account=\\"4806596774001\\"
    data-caption=\\"video\\"
    data-player=\\"BkLm8fT\\"
    data-resource=\\"brightcove\\"
    data-videoid=\\"5389115230001\\">

  <p />

  <embed data-resource=\\"audio\\"
    data-resource_id=\\"945\\"
    data-url=\\"https://test.api.ndla.no/audio-api/v1/audio/945\\">

  <p>Hei på
    <a href=\\"https://ndla.no/\\" rel target title=\\"deg\\">deg</a>og
    <a href=\\"https://ndla.no/\\"
      rel=\\"noopener noreferrer\\"
      target=\\"_blank\\"
      title=\\"meg\\">meg
    </a>
  </p>
  <p />

  <p>NDLA
    <a href=\\"https://ndla.no/en/node/42\\"
      rel=\\"noopener noreferrer\\"
      target=\\"_blank\\"
      title=\\"NODE ID\\">NODE ID
    </a>
  </p>
  <p>ddd</p>
</section>"
`;

exports[`serializing two column list 1`] = `"<ul data-type=\\"two-column\\"><li>Rad 1</li><li>Rad 2</li><li>Rad 3</li></ul>"`;
